# mememachinecollector

./: .gitignore  README.md  main.py  payload.json  payload_memegenerator.json
haskell/memegenerator/: Main.hs  haskell.cabal
imgur/python/: imgurMemes.py  main.py
memegenerator/haskell/: Main.hs  build.sh  haskell.cabal  winBuild.bat
memegenerator/haskell/app/: Main.hs
memegenerator/haskell/src/: Lib.hs
memegenerator/python/: memeGenMemes.py
python/: main.py  subredditList.txt
python/memegenerator/: main.py
python/reddit/: main.py  redditMemes.py
reddit/: main.py  subredditList.txt
reddit/python/: main.py  redditMemes.py  sample.json
