name:                haskell
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable memgenerator-scraper
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wreq
                     , aeson
                     , lens-aeson
                     , lens
                     , text
                     , bytestring
                     , optparse-generic
                     , time
  default-language:    Haskell2010
